--- a/Web.config
+++ b/Web.config
@@ -22,6 +22,7 @@
     <add key="ProjectTitle" value="服务监测系统" />
   </appSettings>
   <system.web>
+    <httpRuntime executionTimeout="36000" delayNotificationTimeout="36000" maxRequestLength="409600000" ></httpRuntime>
     <compilation debug="true" targetFramework="4.0" />
     <authentication mode="Forms">
       <forms loginUrl="~/Home/Login" timeout="2880" defaultUrl="~/Home/MainPage"/>
@@ -39,6 +40,11 @@
     </pages>
   </system.web>
   <system.webServer>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="409600000"/>
+      </requestFiltering>
+    </security>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true" />
     <handlers>
