--- a/BS.Microservice.Web.csproj
+++ b/BS.Microservice.Web.csproj
@@ -224,8 +224,11 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Areas\Service\Controllers\DeviceTypeController.cs" />
     <Compile Include="Areas\Service\Controllers\ManageController.cs" />
     <Compile Include="Areas\Service\Controllers\MonitorController.cs" />
+    <Compile Include="Areas\Service\Controllers\PhysicalDeviceController.cs" />
+    <Compile Include="Areas\Service\Controllers\VirtualDeviceController.cs" />
     <Compile Include="Areas\Service\Models\AppContactsInfo.cs" />
     <Compile Include="Areas\Service\Models\ServiceAlertContactsInfo.cs" />
     <Compile Include="Areas\Service\ServiceAreaRegistration.cs" />
@@ -252,11 +255,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Model\BasicType.cs" />
     <Compile Include="Model\FileEntity.cs" />
     <Compile Include="Model\FunctionalAuthority.cs" />
     <Compile Include="Model\GroupName.cs" />
     <Compile Include="Model\JqGridData.cs" />
     <Compile Include="Model\PageInfo.cs" />
+    <Compile Include="Model\PhysicalDevice.cs" />
     <Compile Include="Model\ReturnMessage.cs" />
     <Compile Include="Model\SubPageResult.cs" />
     <Compile Include="Model\sys_role.cs" />
@@ -268,6 +273,7 @@
     <Compile Include="Model\UserEntity.cs" />
     <Compile Include="Model\UserModel.cs" />
     <Compile Include="Model\View_GroupButtonInfo.cs" />
+    <Compile Include="Model\VirtualDevice.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\AppStateService.cs" />
     <Compile Include="Service\BaseFactory.cs" />
@@ -733,6 +739,15 @@
     <Content Include="Areas\System\Views\UserRole\Index.cshtml" />
     <Content Include="Areas\Service\Views\Manage\_FileList.cshtml" />
     <Content Include="Areas\Service\Views\Manage\UploadFiles.cshtml" />
+    <Content Include="Areas\Service\Views\PhysicalDevice\Index.cshtml" />
+    <Content Include="Areas\Service\Views\PhysicalDevice\Create.cshtml" />
+    <Content Include="Areas\Service\Views\PhysicalDevice\Edit.cshtml" />
+    <Content Include="Areas\Service\Views\VirtualDevice\Index.cshtml" />
+    <Content Include="Areas\Service\Views\VirtualDevice\Create.cshtml" />
+    <Content Include="Areas\Service\Views\VirtualDevice\Edit.cshtml" />
+    <Content Include="Areas\Service\Views\DeviceType\Index.cshtml" />
+    <Content Include="Areas\Service\Views\DeviceType\Create.cshtml" />
+    <Content Include="Areas\Service\Views\DeviceType\Edit.cshtml" />
     <None Include="Properties\PublishProfiles\配置文件1.pubxml" />
     <None Include="Resource\fonts\fontawesome-webfont.eot" />
     <None Include="Resource\fonts\fontawesome-webfont.svg" />
