--- a/Web.config
+++ b/Web.config
@@ -13,6 +13,7 @@
   </connectionStrings>
   <appSettings>
     <add key="mongo" value="localhost:27017"/>
+    <add key="BasicTypes" value="设备类型,服务类型,业主方"/>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
