--- a/BS.Microservice.Web.csproj
+++ b/BS.Microservice.Web.csproj
@@ -781,6 +781,7 @@
     <Content Include="Areas\Service\Views\GroupName\Edit.cshtml" />
     <Content Include="Areas\Task\Views\Cron\Index.cshtml" />
     <Content Include="Areas\Task\Views\Web.config" />
+    <Content Include="Areas\System\Views\SysUser\ChangePassword.cshtml" />
     <None Include="Properties\PublishProfiles\配置文件1.pubxml" />
     <None Include="Resource\fonts\fontawesome-webfont.eot" />
     <None Include="Resource\fonts\fontawesome-webfont.svg" />
